# MBU_Koerselsgodtgoerelse_Skolekoersler_Dan_Excel_Upload_Til_SharePoint

./: .pylintrc  README.md  pyproject.toml
robot_framework/: config.py  process.py
robot_framework/sub_processes/: excel.py
