[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 9.5.0",
    "sqlalchemy >= 2.0.34",
    "openpyxl >= 3.1.5",
    "pandas >= 2.2.2",
    "mbu-dev-shared-components >= 0.0.51",
    "Office365-REST-Python-Client"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]